# cue

./: .gitignore  .release-please-config.json  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  README.md  biome.json  components.json  index.html  package.json  release-please-config.json  rsbuild.config.ts  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release-please.yml  release.yml
src/: App.css  App.tsx  main.tsx  root.css  routeTree.gen.ts
src-tauri/: CHANGELOG.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_setup.sql  002_add_source_url.sql  003_add_tags.sql  004_remove_playlists.sql
src-tauri/queries/: add_song.sql  add_song_to_playlist.sql  create_playlist.sql  edit_song.sql  get_playlists.sql  get_song_by_id.sql  get_songs.sql  remove_song.sql  remove_song_from_playlist.sql  search_songs.sql  update_song_tags.sql
src-tauri/src/: commands.rs  config.rs  download.rs  lib.rs  main.rs  rekordbox.rs
src-tauri/src/bundler/: bun.rs  ejs.rs  ffmpeg.rs  mod.rs  ytdlp.rs
src-tauri/src/db/: commands.rs  entities.rs  mod.rs
src-tauri/src/download/: manager.rs  mod.rs  process.rs  types.rs
src/components/: DownloadInput.tsx  DownloadItem.tsx  DownloadList.tsx  DownloadQueueStatus.tsx  EmptyState.tsx  FolderPicker.tsx  Header.tsx  Logo.tsx  Updater.tsx  floating-dock.tsx
src/components/download/: SongMetadata.tsx  StatusIcon.tsx
src/components/queue/: ActiveDownloadItem.tsx  QueuedDownloadList.tsx
src/components/ui/: button.tsx  card.tsx  data-table.tsx  input.tsx  progress.tsx  switch.tsx  table.tsx
src/hooks/: useConfig.ts  useDownload.ts  useLibrarySongs.ts  useMetadata.ts  useSmartQueue.ts
src/lib/: tauri-commands.ts  updater.ts  utils.ts
src/lib/tauri/: TauriProvider.tsx  api.ts  commands.ts  env.ts
src/lib/tauri/core/: MockTauriService.ts  RealTauriService.ts  types.ts
src/routes/: __root.tsx  config.tsx  index.tsx  library.tsx  playlists.tsx  setup.tsx  table.tsx
