[package]
name = "cue"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cue_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.101"
dirs = "6.0.0"
reqwest = { version = "0.13.2", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.33"
sqlx = { version = "0.8", features = [
    "sqlite",
    "runtime-tokio",
    "macros",
    "migrate",
] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tokio = { version = "1.49.0", features = ["full"] }
quick-xml = { version = "0.39.1", features = ["serialize"] }
zip = { version = "8.1.0", default-features = false, features = ["deflate"] }
tar = "0.4.40"
xz2 = "0.1.7"
tempfile = "3.25.0"

[dev-dependencies]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
