[package]
authors = ["you"]
description = "A Tauri App"
edition = "2021"
name = "cue"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
crate-type = ["staticlib", "cdylib", "rlib"]
name = "cue_lib"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
anyhow = "1.0.103"
dirs = "6.0.0"
quick-xml = { version = "0.41.0", features = ["serialize"] }
reqwest = { version = "0.13.4", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.33"
sqlx = { version = "0.9.0", features = [
    "sqlite",
    "runtime-tokio",
    "macros",
    "migrate",
] }
tar = "0.4.46"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-dialog = "2.7.2"
tauri-plugin-opener = "2.5.4"
tauri-plugin-process = "2.3.1"
tempfile = "3.27.0"
tokio = { version = "1.53.0", features = ["full"] }
xz2 = "0.1.7"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[dev-dependencies]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.10.1"
